ajustando Url e username

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,2 +1,1 @@
-salesforceCoreUrl=https://carbon3-dev-ed.develop.my.salesforce.com/
-storeFrontB2BUrl=https://
+storeFrontCommerceUrl=https://www.saucedemo.com/inventory.html
