--- a/src/test/resources/credentials.properties
+++ b/src/test/resources/credentials.properties
@@ -1,8 +1,8 @@
 buyerUsername=
 buyerPassword=
 
-coreUsername=cbloccitane@carbontech.digital.ed
-corePassword=j24wzZSxD8hden@
+username=standard_user
+password=secret_sauce
 
 //coreUsername=${CORE_USERNAME}
 //corePassword=${CORE_PASSWORD}
