--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                 <configuration>
                     <includes>
                         <include>**/*Test.java</include>
-                        <include>**/CucumberRunnerTest.java</include>
+                        <include>**/CucumberTest.java</include>
                     </includes>
                 </configuration>
             </plugin>
