--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,26 +2,29 @@ name: CI Pipeline
 
 on:
   schedule:
-    # Executa nos dias úteis às 9h, 12h, 15h e 18h (UTC)
-    - cron: "0 12,15,18,21 * * 1-5"  # Brasil (UTC-3)
+    # Executa nos dias úteis às 9h, 12h, 15h e 18h
+    - cron: "0 9,12,15,18 * * 1-5"
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Check out repository
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'temurin' # Adoptium Temurin JDK
           java-version: '17'
+          
+      - name: Install Chrome (for WebDriver tests)
+        run: choco install googlechrome --no-progress -y
 
-      - name: Install dependencies and build
-        run: mvn clean install -DskipTests
-
+      - name: Install Dependencies
+        run: mvn clean install
+        
       - name: Run tests
-        run: mvn -Dtest=runner.CucumberTest test
+        run: mvn test -Dcucumber.options="--tags @given,@when,@then"
