--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,4 +27,4 @@ jobs:
         run: mvn clean install
         
       - name: Run tests
-        run: mvn test -Dcucumber.options="--tags @given,@when,@then"
+        run: mvn test
