--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Check out repository
@@ -20,11 +20,8 @@ jobs:
           distribution: 'temurin' # Adoptium Temurin JDK
           java-version: '17'
           
-      - name: Install Chrome (for WebDriver tests)
-        run: choco install googlechrome --no-progress -y --ignore-checksums
-
       - name: Install Dependencies
-        run: mvn clean install
+        run: mvn clean install -DskipTests
         
       - name: Run tests
         run: mvn test
