--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>7.18.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.7.0</version>
+        </dependency>
 
         <!-- JUnit -->
         <dependency>
